==> AddictiveInstruments/ADIOS/mios32/STM32G0xx/mios32_ain.c <==
#include <mios32.h>
#define NUM_CHANNELS_MAX 8
#define NUM_AIN_PINS (NUM_CHANNELS_MAX * (1 << MIOS32_AIN_MUX_PINS))
#define NUM_CHANGE_WORDS (1 + (NUM_AIN_PINS>>5))

s32 MIOS32_AIN_Init(u32 mode)
{
  // currently only mode 0 supported
  if( mode != 0 )
    return -1; // unsupported mode

#if !MIOS32_AIN_CHANNEL_MASK
  return -1; // no AIN pins selected
#else
  int i;

  ain_deadband = MIOS32_AIN_DEADBAND;

  // disable service prepare callback function
  service_prepare_callback = NULL;

  // clear arrays and variables
  for(i=0; i<NUM_CHANNELS_MAX; ++i) {
    adc_conversion_values[i] = 0;
#if MIOS32_AIN_OVERSAMPLING_RATE >= 2
    adc_conversion_values_sum[i] = 0;
#endif
  }
  for(i=0; i<NUM_AIN_PINS; ++i) {
    ain_pin_values[i] = 0;
#if MIOS32_AIN_DEADBAND_IDLE
    ain_pin_idle_ctr[i] = 0;
#endif
  }
  for(i=0; i<NUM_CHANGE_WORDS; ++i) {
    ain_pin_changed[i] = 0;
  }
  oversampling_ctr = mux_ctr = 0;


  // set analog pins
  LL_GPIO_InitTypeDef GPIO_InitStructure;
  LL_GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.Mode  = LL_GPIO_MODE_ANALOG;
  GPIO_InitStructure.Pull = LL_GPIO_PULL_NO;

  for(i=0; i<NUM_CHANNELS_MAX; ++i) {
    if( MIOS32_AIN_CHANNEL_MASK & (1 << i) ) {      
      GPIO_InitStructure.Pin = adc_chn_map[i].pin_mask;
      LL_GPIO_Init(adc_chn_map[i].port, &GPIO_InitStructure);
    }
  }

  // configure MUX pins if enabled
#if MIOS32_AIN_MUX_PINS >= 0
  GPIO_InitStructure.Mode  = LL_GPIO_MODE_OUTPUT;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
#if MIOS32_AIN_MUX_PINS >= 1
  GPIO_InitStructure.Pin = MIOS32_AIN_MUX0_PIN;
  LL_GPIO_Init(MIOS32_AIN_MUX0_PORT, &GPIO_InitStructure);
#endif
#if MIOS32_AIN_MUX_PINS >= 2
  GPIO_InitStructure.Pin = MIOS32_AIN_MUX1_PIN;
  LL_GPIO_Init(MIOS32_AIN_MUX1_PORT, &GPIO_InitStructure);
#endif
#if MIOS32_AIN_MUX_PINS >= 3
  GPIO_InitStructure.Pin = MIOS32_AIN_MUX2_PIN;
  LL_GPIO_Init(MIOS32_AIN_MUX2_PORT, &GPIO_InitStructure);
#endif
#endif


  // enable ADC1/2 clock
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_ADC1 | RCC_APB2Periph_ADC2, ENABLE);

  // map channels to conversion slots depending on the channel selection mask
  // distribute this over the two ADCs, so that channels can be converted in parallel
  num_channels = 0;
  for(i=0; i<NUM_CHANNELS_MAX; ++i) {
    if( MIOS32_AIN_CHANNEL_MASK & (1 << i) ) {
      ADC_RegularChannelConfig(
        (num_channels & 1) ? ADC2 : ADC1, 
	adc_chn_map[i].chn, 
	(num_channels>>1)+1, 
	ADC_SampleTime_144Cycles);
      ++num_channels;
    }
  }

  // ensure that num_used_channels is an even value to keep ADC2 in synch with ADC1
  num_used_channels = num_channels;
  if( num_used_channels & 1 )
      ++num_used_channels;

  // configure ADCs
  ADC_CommonInitTypeDef ADC_CommonInitStructure;
  ADC_CommonStructInit(&ADC_CommonInitStructure);
  ADC_CommonInitStructure.ADC_Mode = ADC_DualMode_RegSimult;
  ADC_CommonInitStructure.ADC_Prescaler = ADC_Prescaler_Div2;
  ADC_CommonInitStructure.ADC_DMAAccessMode = ADC_DMAAccessMode_2;
  ADC_CommonInitStructure.ADC_TwoSamplingDelay = ADC_TwoSamplingDelay_5Cycles;
  ADC_CommonInit(&ADC_CommonInitStructure);

  ADC_InitTypeDef ADC_InitStructure;
  ADC_StructInit(&ADC_InitStructure);
  ADC_InitStructure.ADC_ScanConvMode = ENABLE;
  ADC_InitStructure.ADC_ContinuousConvMode = DISABLE;
  ADC_InitStructure.ADC_ExternalTrigConvEdge = ADC_ExternalTrigConvEdge_None;
  //ADC_InitStructure.ADC_ExternalTrigConv = ADC_ExternalTrigConv_None;
  ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Right;
  ADC_InitStructure.ADC_NbrOfConversion = num_used_channels >> 1;
  ADC_Init(ADC1, &ADC_InitStructure);
  ADC_Init(ADC2, &ADC_InitStructure);

  // enable ADC1->DMA request
  ADC_DMACmd(ADC1, ENABLE);
  ADC_MultiModeDMARequestAfterLastTransferCmd(ENABLE);

  // enable ADCs
  ADC_Cmd(ADC1, ENABLE);
  ADC_Cmd(ADC2, ENABLE);


  // enable DMA2 clock
  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2, ENABLE);

  // configure DMA1 channel 1 to fetch data from ADC result register
  DMA_Cmd(DMA2_Stream0, DISABLE);
  DMA_InitTypeDef DMA_InitStructure;
  DMA_StructInit(&DMA_InitStructure);
  DMA_InitStructure.DMA_Channel = DMA_Channel_0;
  DMA_InitStructure.DMA_PeripheralBaseAddr = (u32)&ADC->CDR;
  DMA_InitStructure.DMA_Memory0BaseAddr = (u32)&adc_conversion_values;
  DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralToMemory;
  DMA_InitStructure.DMA_BufferSize = num_used_channels >> 1; // number of conversions depends on number of used channels
  DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
  DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
  DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Word;
  DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Word;
  DMA_InitStructure.DMA_Mode = DMA_Mode_Circular;
  DMA_InitStructure.DMA_Priority = DMA_Priority_High;
  DMA_Init(DMA2_Stream0, &DMA_InitStructure);
  DMA_Cmd(DMA2_Stream0, ENABLE);

  // trigger interrupt when all conversion values have been fetched
  DMA_ITConfig(DMA2_Stream0, DMA_IT_TC, ENABLE);

  // Configure and enable DMA interrupt
  MIOS32_IRQ_Install(DMA2_Stream0_IRQn, MIOS32_IRQ_AIN_DMA_PRIORITY);

  // finally start initial conversion
  MIOS32_AIN_StartConversions();

  return 0;
#endif
}
